--- a/lmsBackend/appsettings.json
+++ b/lmsBackend/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;port=3306;database=mylms;user=lmsuser;password=yash;AllowPublicKeyRetrieval=True;SslMode=none;"
+        "DefaultConnection": "server=EVS01LAP2517;database=myLmstest;integrated security = true;Encrypt=False;TrustServerCertificate=true"
     }
 }
