creat edit lob api

--- a/lmsBackend/appsettings.json
+++ b/lmsBackend/appsettings.json
@@ -7,6 +7,6 @@
     },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "DefaultConnection": "server=EVS01LAP2517;database=myLmstest;integrated security = true;Encrypt=False;TrustServerCertificate=true"
+        "DefaultConnection": "server=EVS01LAP2358\\SQLEXPRESS02;database=LMStst;uid=sa;pwd=12345;TrustServerCertificate=true"
     }
 }
